--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "language-icons",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/AnandChowdhary/language-icons",
   "author": "Anand Chowdhary <mail@anandchowdhary.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc && node dist/index.js"
+    "build": "tsc && node dist/index.js",
+    "watch": "onchange 'index.ts' -- yarn build"
   },
   "devDependencies": {
     "@types/node": "^11.10.4",
+    "onchange": "^5.2.0",
     "tsc": "^1.20150623.0",
     "typescript": "^3.3.3333"
   }
